# CI285-calculator

./: .gitignore  Application.hs  Foundation.hs  Main.hs  README.md  ci285-calculator.cabal  client_session_key.aes
Handler/: History.hs  Home.hs  Operation.hs  Signup.hs  User.hs  Users.hs
config/: models  routes
db/: calc.db  calc.db-shm  calc.db-wal
src/: Server.hs
static/: jquery-base64.js  main.js
templates/: default-layout.hamlet  main.hamlet  signup.hamlet  usersHome.hamlet
