name:                ci285-calculator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/grrinchas/ci285-calculator#readme
license:             BSD3
license-file:        LICENSE
author:              Dainius Grinciukas
maintainer:          dg4675dg@gmail.com
copyright:           2017 Dainius Grinciukas
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server
  build-depends:       base >= 4.7 && < 5
                     , yesod
                     , aeson
  default-language:    Haskell2010

test-suite ci285-calculator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ci285-calculator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/grrinchas/ci285-calculator
