name:                ci285-calculator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/grrinchas/ci285-calculator#readme
license:             BSD3
license-file:        LICENSE
author:              Dainius Grinciukas
maintainer:          dg4675dg@gmail.com
copyright:           2017 Dainius Grinciukas
category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , config/routes
                   , static/main.js
                   , templates/default-layout.hamlet
cabal-version:       >=1.10

executable           ci285-calculator
  default-language:  Haskell2010
  main-is:           Main.hs
  other-modules:     Application
                     Foundation
                     Handler.Operation
                     Handler.Home

  build-depends:     base
                   , yesod
                   , shakespeare
                   , blaze-html
                   , aeson

source-repository head
  type:              git
  location:          https://github.com/grrinchas/ci285-calculator
