name:                ci285-calculator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/grrinchas/ci285-calculator#readme
license:             BSD3
license-file:        LICENSE
author:              Dainius Grinciukas
maintainer:          dg4675dg@gmail.com
copyright:           2017 Dainius Grinciukas
category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , config/routes
                   , static/main.js
                   , templates/main.hamlet
                   , templates/signup.hamlet
build-depends:       base >=4.7 && < 5

executable           ci285-calculator
  main-is:           Main.hs
  other-modules:     Application
                     Foundation
                     Handler.Operation
                     Handler.Home
                     Handler.Signup
                     Handler.Users

  build-depends:     base
                   , yesod
                   , yesod-static
                   , shakespeare
                   , blaze-html
                   , aeson
                   , yesod-core
                   , network
                   , http-types
                   , wai
                   , persistent
                   , persistent-sqlite
                   , persistent-template
                   , monad-logger
                   , resourcet
                   , text
                   , base64-bytestring
                   , either-unwrap

source-repository head
  type:              git
  location:          https://github.com/grrinchas/ci285-calculator
